[package]
name = "threshold-crypto"
version = "0.1.0"
authors = ["Eason Gao <kaoimin@qq.com>"]
edition = "2018"
license = "MIT"
include = ["Cargo.toml", "src/*", "README.md", "LICENSE"]
readme = "README.md"
repository = "https://github.com/KaoImin/threshold-crypto"
description = """
A threshold crypto system with distributed key generation.
"""

[dependencies]
blake2b_simd = "0.4"
pairing = "0.14"
rand = "0.4"
rand_core = "0.3"
rand_chacha = "0.1"
rand04_compat = "0.1"